@@ -407,7 +407,6 @@ CONFIG_USBHOST_NPREALLOC=4
 # CONFIG_USBHOST_MSC is not set
 # CONFIG_USBHOST_HIDKBD is not set
 CONFIG_USBHOST_HIDMOUSE=y
-CONFIG_HIDMOUSE_POLLUSEC=100000
 CONFIG_HIDMOUSE_DEFPRIO=50
 CONFIG_HIDMOUSE_STACKSIZE=1024
 CONFIG_HIDMOUSE_BUFSIZE=64
